fix: minor style issues on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -106,5 +106,6 @@ label, .label {
 	}
 	.caption {
 		margin-left: 0;
+		margin-right: 0;
 	}
 }
