--- a/src/components/ProjectListItem/ProjectListItem.module.css
+++ b/src/components/ProjectListItem/ProjectListItem.module.css
@@ -50,10 +50,7 @@
 	.infoContainer {
 		width: 100%;
 	}
-	.container img {
+	.coverImage {
 		width: 100%;
-		height: 10rem;
-		border-radius: 2rem;
-		object-fit: cover;
 	}
 }
