--- a/src/pages/ProjectPage/ProjectPage.module.css
+++ b/src/pages/ProjectPage/ProjectPage.module.css
@@ -1,5 +1,6 @@
 .container {
 	padding: 6rem 2rem 2rem 2rem;
+	overflow-x: hidden;
 }
 .container img {
 	border-radius: 2rem;
@@ -16,6 +17,7 @@
 
 .navContainer {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 1rem;
 	align-items: center;
 	margin: 1rem 0;
